# ddmerge

./: .gitattributes  .gitignore  .typos.toml  Cargo.toml  Makefile  README.md  cspell.config.yml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: label-checker.yml  rust-build.yml  rust-fmt.yml  rust-lint.yml  rust-test.yml  typo-checker.yml
src/: lib.rs  main.rs
src/diff/: directory.rs  file.rs  hunk.rs  mod.rs
src/merge/: mod.rs  strategy.rs
src/ui/: display.rs  hunk_display.rs  mod.rs  prompt.rs
test/left-dir/: locals.tf  main.tf
test/right-dir/: locals.tf  main.tf
